# PyTorch-Breast-Ultrasound-Segmentation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: train.yaml
configs/data/: breast_cancer_dataset.yaml  default.yaml
configs/datamodule/: breast_cancer_datamodule.yaml  default.yaml
configs/losses/: cross_entropy.yaml  default.yaml  dice_loss.yaml
configs/model/optimizers/: adam.yaml
configs/models/: vggnet_fcn_segmentation_model.yaml
configs/models/nets/: fcn.yaml  vanella_vggnet.yaml  vgg_net_encoder.yaml
configs/models/optimizer/: adam.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml  gpu.yaml
notebooks/: 01_exploratory_data_analysis.ipynb  02_model_training.ipynb  02_model_vggnet_fcn_define.ipynb  02_model_vggnet_fcn_training_setup.ipynb  02_model_vggnet_fcn_training_single_head_setup.ipynb  02_model_vggnet_training.ipynb  03_model_vggnet_fcn_training_both_heads_segmentation_classification_setup.ipynb
src/: evaluate.py  train.py
src/data_modules/: __init__.py
src/datamodules/: __init__.py  breast_cancer_dataloader_module.py
src/losses/: dice_loss.py
src/models/: basemodel.py  vggnet_fcn16_segmentation_model.py  vggnet_fcn8_segmentation_model.py  vggnet_fcn_segmentation_model.py
src/utils/: gpu_utils.py  train_utils.py  visualizations.py
tests/: test_configs.py  test_vanilla_vggnet.py
tests/datamodules/: test_breast_cancer_dataloader_module.py
tests/models/: test_vggnet_fcn_segmentation_model.py
(+16 files in other folders)
